# sentiric-sbc-service

./: .context.md  .gitignore  Cargo.toml  Dockerfile  LOGIC.md  README.md  TASKS.md  TEST.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  telemetry.rs  tls.rs
src/grpc/: client.rs  mod.rs  service.rs
src/rtp/: engine.rs
src/sip/: engine.rs  mod.rs  security.rs  server.rs
src/sip/handlers/: media.rs  mod.rs  packet.rs  security.rs
