[package]
name = "sentiric-sbc-service"
version = "1.3.3"
edition = "2021"

[dependencies]
# Async & Network
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config & Utils
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
rand = "0.8"
dashmap = "5.5"
governor = "0.6"
nonzero_ext = "0.3"

# --- THE IRON CORE (UPGRADED) ---
sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git", tag = "v1.3.1" }
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.4.1" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.15.0" }